src/objects/F_I_Product__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax_Name__c</fullName>
        <formula>Applicable_Tax__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Tax Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Method__c</fullName>
        <label>Cost Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Cost</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Percent Retail</fullName>
                </value>
                <value>
                    <fullName>Price withheld</fullName>
                </value>
                <value>
                    <fullName>Cost withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Rate__c</fullName>
        <label>Cost Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Finance</label>
        <referenceTo>Deal_Finance__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Item Description</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_When_Tax_Included__c</fullName>
        <label>Price When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percentage__c</fullName>
        <description>Sales tax percentage</description>
        <label>Sales Tax Percentage</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>Price__c - Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF($Setup.Configurations__c.Tax_Included_Pricing__c , Price__c , Price__c +
            Sales_Tax__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Financing Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>F &amp; I Products</relationshipLabel>
        <relationshipName>F_I_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>F &amp; I Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FI-{00000000}</displayFormat>
        <label>F &amp; I Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F &amp; I Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>